dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(sched_pp, 1.0, bugs-sched_pp@mcbehr.de, [sched_pp], [https://github.com/mbehr1/sched_pp])

AC_CHECK_HEADER(sched.h)

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE()

AC_PROG_CC

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT

